# big-counter

./: .coveragerc  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  GEMINI.md  MANIFEST.in  OPENCODE.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_api_server.py  run_cli.py  run_comparison.py  run_mcp.py  run_mcp_http_server.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  codeql.yml  release.yaml
docs/: starting_prompt.md  usage_guide.md
docs/bcp-ruler/: index.md  viz.html
docs/bcp-ruler/concepts/: complexity-element.md  dimension-module.md  element-router.md  identity-rule.md  index.md  maturity-score.md  nfr-gate.md  sizer.md
docs/bcp-ruler/dimensions/: audits.md  background-processes.md  index.md  (+11 more)
docs/usage/: README.md  cli_usage.md  http_api_usage.md  sdk_usage.md
scripts/: compare_providers.py  generate_okf_viz.py  setup.sh  stability_test.py
specs/: CONTEXT.md  PLAN-AUDIT_LATEST.md  PLAN.md  ROLLOUT_ONEPAGER.md  execution-status.yaml  release-plan.yaml  stability-harness.md  state.yaml
specs/ADRS/: 0001-element-router-owns-dimension-classification.md  0002-router-emits-canonical-elements-via-identity-rules.md  0003-aspect-splitting-and-business-rules-as-residual.md  0004-rebaseline-over-bug-compatibility.md  0005-ruler-evolution-mandate.md  0006-criteria-defined-sizes-no-adjectives.md  0007-pure-core-dimension-modules.md  0008-retry-then-fail-no-partial-totals.md  0009-parse-or-raise-prompt-contract.md  0010-calibration-id-provenance.md  0011-model-pinning-and-recalibration.md
specs/bugs/: BUG-1.md  BUG-10.md  BUG-2.md  BUG-3.md  BUG-4.md  BUG-5.md  BUG-6.md  BUG-7.md  BUG-8.md  BUG-9.md  registry.yaml
specs/okf-integration/: PLAN.md
specs/product/: SCOPE_LATEST.yaml
specs/tech-architecture/: tech-stack.md
src/: __init__.py  main.py
src/api/: __init__.py  models.py  server.py
src/bcp/: __init__.py  bcp_calculator.py  llm_providers.py  logger.py  prompt_handler.py
src/sdk/: __init__.py  client.py
tests/: conftest.py  test_providers.py  test_sdk.py
tests/data/: story10.md  story11.md  story12.md  story13.md  story14.md  story15.md  story2.md  story3.md  story4.md  story5.md  story6.md  story7.md  story8.md  story9.md
tests/integration/: test_api_server.py
tests/unit/: test_bcp_calculator.py  test_cli.py  test_guard_bare_imports.py  test_llm_providers.py  test_logger.py  test_main_formatters.py  test_models.py  test_prompt_handler.py  test_sdk_client.py
(+43 files in other folders)
