[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
exclude = ["venv/", ".venv/"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "tests/unit", "tests/integration"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"