[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "N805",  # cls arg in @model_validator is correct Pydantic convention
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
exclude = ["venv/", ".venv/"]
ignore_missing_imports = true

[tool.semantic_release]
branches = { main = { match = "main" } }
version_variables = [
    "src/bcp/__init__.py:__version__",
    "setup.py:version",
]
hvcs = "github"
build_command = "pip install -e ."
changelog_file = "CHANGELOG.md"
changelog_mode = "init"
commit_parser = "conventional"

[tool.pytest.ini_options]
testpaths = ["tests", "tests/unit", "tests/integration"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"
